Moved run gp into it's own function and added options for hyperparameter search

--- a/tests/test_Project_merged_points_to_image.ipynb
+++ b/tests/test_Project_merged_points_to_image.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "4525d941",
    "metadata": {},
    "outputs": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "0a55030b",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "983d0018",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "7eeba008",
    "metadata": {},
    "outputs": [
@@ -69,8 +69,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/thayer/Desktop/DavidCS/ubuntu_partition/code/pydar/pydar.py:1856: UserWarning: You are passing a SingleScan's PolyData withoutit's history.\n",
-      "  warnings.warn(\"You are passing a SingleScan's PolyData without\" +\n"
+      "/home/thayer/Desktop/DavidCS/ubuntu_partition/code/pydar/pydar.py:1860: UserWarning: You are passing a SingleScan's PolyData withoutit's history.\n",
+      "  \"it's history.\")\n"
      ]
     }
    ],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "d80827a8",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "86c943bf",
    "metadata": {},
    "outputs": [
@@ -110,18 +110,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vtkPolyData (0x56316a1e76f0)\n",
+      "vtkPolyData (0x56221c50b990)\n",
       "  Debug: Off\n",
-      "  Modified Time: 157068564\n",
+      "  Modified Time: 157074464\n",
       "  Reference Count: 1\n",
       "  Registered Events: (none)\n",
-      "  Information: 0x563150435cb0\n",
+      "  Information: 0x56221c50b890\n",
       "  Data Released: False\n",
       "  Global Release Data: Off\n",
-      "  UpdateTime: 157068570\n",
+      "  UpdateTime: 157074470\n",
       "  Field Data:\n",
       "    Debug: Off\n",
-      "    Modified Time: 157068329\n",
+      "    Modified Time: 157074229\n",
       "    Reference Count: 1\n",
       "    Registered Events: (none)\n",
       "    Number Of Arrays: 0\n",
@@ -131,14 +131,14 @@
       "  Number Of Cells: 7\n",
       "  Cell Data:\n",
       "    Debug: Off\n",
-      "    Modified Time: 157068510\n",
+      "    Modified Time: 157074410\n",
       "    Reference Count: 1\n",
       "    Registered Events: \n",
       "      Registered Observers:\n",
-      "        vtkObserver (0x56316a1e7cf0)\n",
+      "        vtkObserver (0x5622244a4e50)\n",
       "          Event: 33\n",
       "          EventName: ModifiedEvent\n",
-      "          Command: 0x56316a1e79b0\n",
+      "          Command: 0x56221c50bcb0\n",
       "          Priority: 0\n",
       "          Tag: 1\n",
       "    Number Of Arrays: 0\n",
@@ -160,14 +160,14 @@
       "    HigherOrderDegrees: (none)\n",
       "  Point Data:\n",
       "    Debug: Off\n",
-      "    Modified Time: 157068562\n",
+      "    Modified Time: 157074462\n",
       "    Reference Count: 1\n",
       "    Registered Events: \n",
       "      Registered Observers:\n",
-      "        vtkObserver (0x56316a1e7b60)\n",
+      "        vtkObserver (0x56221c50be60)\n",
       "          Event: 33\n",
       "          EventName: ModifiedEvent\n",
-      "          Command: 0x56316a1e79b0\n",
+      "          Command: 0x56221c50bcb0\n",
       "          Priority: 0\n",
       "          Tag: 1\n",
       "    Number Of Arrays: 5\n",
@@ -183,7 +183,7 @@
       "    Pass Through Flags: ( 1 1 1 1 1 1 1 1 1 1 1 )\n",
       "    Scalars: \n",
       "      Debug: Off\n",
-      "      Modified Time: 157068537\n",
+      "      Modified Time: 157074437\n",
       "      Reference Count: 1\n",
       "      Registered Events: (none)\n",
       "      Name: norm_height\n",
@@ -191,9 +191,9 @@
       "      Size: 14380\n",
       "      MaxId: 14379\n",
       "      NumberOfComponents: 1\n",
-      "      Information: 0x56315044ce20\n",
+      "      Information: 0x56221c509ad0\n",
       "        Debug: Off\n",
-      "        Modified Time: 157068541\n",
+      "        Modified Time: 157074441\n",
       "        Reference Count: 1\n",
       "        Registered Events: (none)\n",
       "      Name: norm_height\n",
@@ -209,7 +209,7 @@
       "    GlobalIds: (none)\n",
       "    PedigreeIds: \n",
       "      Debug: Off\n",
-      "      Modified Time: 157068527\n",
+      "      Modified Time: 157074427\n",
       "      Reference Count: 1\n",
       "      Registered Events: (none)\n",
       "      Name: PointId\n",
@@ -217,9 +217,9 @@
       "      Size: 14380\n",
       "      MaxId: 14379\n",
       "      NumberOfComponents: 1\n",
-      "      Information: 0x56315044cb40\n",
+      "      Information: 0x562244bf3c10\n",
       "        Debug: Off\n",
-      "        Modified Time: 157068531\n",
+      "        Modified Time: 157074431\n",
       "        Reference Count: 1\n",
       "        Registered Events: (none)\n",
       "      Name: PointId\n",
@@ -236,10 +236,10 @@
       "    Xmin,Xmax: (40.052, 60.0485)\n",
       "    Ymin,Ymax: (65.051, 85.0493)\n",
       "    Zmin,Zmax: (-3.13116, -2.50147)\n",
-      "  Compute Time: 157068913\n",
+      "  Compute Time: 157074813\n",
       "  Editable: false\n",
       "  Number Of Points: 14380\n",
-      "  Point Coordinates: 0x563151f6f510\n",
+      "  Point Coordinates: 0x56222448fd20\n",
       "  PointLocator: 0\n",
       "  CellLocator: 0\n",
       "  Number Of Vertices: 7\n",
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "3332055f",
    "metadata": {},
    "outputs": [
@@ -294,7 +294,16 @@
    "execution_count": 11,
    "id": "45c90d3c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/thayer/Desktop/DavidCS/ubuntu_partition/code/pydar/pydar.py:4976: UserWarning: Still has temporary fix for negative norm z sigma\n",
+      "  \n"
+     ]
+    }
+   ],
    "source": [
     "# Test our function for using gpytorch to create an image from points\n",
     "\n",
@@ -322,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "556a8ce3",
    "metadata": {},
    "outputs": [],
@@ -335,19 +344,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "id": "b0be075c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pdal not imported, functions relying on it will fail\n",
-      "opencv was not imported, functions relying on it will fail\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "v_min = 0\n",
     "v_max = 0.1\n",
@@ -357,27 +357,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "f759a215",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pdal not imported, functions relying on it will fail\n",
-      "opencv was not imported, functions relying on it will fail\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/thayer/Desktop/DavidCS/ubuntu_partition/code/pydar/pydar.py:4983: UserWarning: Still has temporary fix for negative norm z sigma\n",
-      "  warnings.warn('Still has temporary fix for negative norm z sigma')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Repeat, now with corner_coords\n",
     "corner_coords = np.array([[40, 65, 0],\n",
@@ -393,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "5c24c418",
    "metadata": {},
    "outputs": [],
@@ -409,24 +392,7 @@
    "execution_count": 17,
    "id": "343c67c8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pdal not imported, functions relying on it will fail\n",
-      "opencv was not imported, functions relying on it will fail\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/thayer/Desktop/DavidCS/ubuntu_partition/code/pydar/pydar.py:4983: UserWarning: Still has temporary fix for negative norm z sigma\n",
-      "  warnings.warn('Still has temporary fix for negative norm z sigma')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# repeat with kdtree\n",
     "\n",
@@ -484,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "id": "edef3b97",
    "metadata": {},
    "outputs": [],
@@ -495,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "id": "e19d2099",
    "metadata": {},
    "outputs": [],
@@ -506,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "id": "c22e5859",
    "metadata": {},
    "outputs": [],
@@ -523,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "id": "118beb9e",
    "metadata": {},
    "outputs": [],
@@ -533,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "id": "c8404c5d",
    "metadata": {},
    "outputs": [],
