Partway through adding area point selection to rigid_alignment_3

--- a/tests/test_Project_merged_points_to_image.ipynb
+++ b/tests/test_Project_merged_points_to_image.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "983d0018",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "7eeba008",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "86c943bf",
    "metadata": {},
    "outputs": [
@@ -101,18 +101,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vtkPolyData (0x56005a8bbf80)\n",
+      "vtkPolyData (0x55b03185e830)\n",
       "  Debug: Off\n",
-      "  Modified Time: 470967466\n",
+      "  Modified Time: 156991680\n",
       "  Reference Count: 1\n",
       "  Registered Events: (none)\n",
-      "  Information: 0x5600543c81b0\n",
+      "  Information: 0x55b03185e730\n",
       "  Data Released: False\n",
       "  Global Release Data: Off\n",
-      "  UpdateTime: 470967470\n",
+      "  UpdateTime: 156991684\n",
       "  Field Data:\n",
       "    Debug: Off\n",
-      "    Modified Time: 470967301\n",
+      "    Modified Time: 156991515\n",
       "    Reference Count: 1\n",
       "    Registered Events: (none)\n",
       "    Number Of Arrays: 0\n",
@@ -122,14 +122,14 @@
       "  Number Of Cells: 7\n",
       "  Cell Data:\n",
       "    Debug: Off\n",
-      "    Modified Time: 470967432\n",
+      "    Modified Time: 156991646\n",
       "    Reference Count: 1\n",
       "    Registered Events: \n",
       "      Registered Observers:\n",
-      "        vtkObserver (0x56005a8bc5e0)\n",
+      "        vtkObserver (0x55b03185ee90)\n",
       "          Event: 33\n",
       "          EventName: ModifiedEvent\n",
-      "          Command: 0x56005a8bc2a0\n",
+      "          Command: 0x55b03185eb50\n",
       "          Priority: 0\n",
       "          Tag: 1\n",
       "    Number Of Arrays: 0\n",
@@ -151,14 +151,14 @@
       "    HigherOrderDegrees: (none)\n",
       "  Point Data:\n",
       "    Debug: Off\n",
-      "    Modified Time: 470967464\n",
+      "    Modified Time: 156991678\n",
       "    Reference Count: 1\n",
       "    Registered Events: \n",
       "      Registered Observers:\n",
-      "        vtkObserver (0x56005a8bc450)\n",
+      "        vtkObserver (0x55b03185ed00)\n",
       "          Event: 33\n",
       "          EventName: ModifiedEvent\n",
-      "          Command: 0x56005a8bc2a0\n",
+      "          Command: 0x55b03185eb50\n",
       "          Priority: 0\n",
       "          Tag: 1\n",
       "    Number Of Arrays: 3\n",
@@ -172,7 +172,7 @@
       "    Pass Through Flags: ( 1 1 1 1 1 1 1 1 1 1 1 )\n",
       "    Scalars: \n",
       "      Debug: Off\n",
-      "      Modified Time: 470967438\n",
+      "      Modified Time: 156991652\n",
       "      Reference Count: 1\n",
       "      Registered Events: (none)\n",
       "      Name: Classification\n",
@@ -180,9 +180,9 @@
       "      Size: 14380\n",
       "      MaxId: 14379\n",
       "      NumberOfComponents: 1\n",
-      "      Information: 0x56005a908250\n",
+      "      Information: 0x55b0318aaf20\n",
       "        Debug: Off\n",
-      "        Modified Time: 470967442\n",
+      "        Modified Time: 156991656\n",
       "        Reference Count: 1\n",
       "        Registered Events: (none)\n",
       "      Name: Classification\n",
@@ -198,7 +198,7 @@
       "    GlobalIds: (none)\n",
       "    PedigreeIds: \n",
       "      Debug: Off\n",
-      "      Modified Time: 470967448\n",
+      "      Modified Time: 156991662\n",
       "      Reference Count: 1\n",
       "      Registered Events: (none)\n",
       "      Name: PointId\n",
@@ -206,9 +206,9 @@
       "      Size: 14380\n",
       "      MaxId: 14379\n",
       "      NumberOfComponents: 1\n",
-      "      Information: 0x56005a90c110\n",
+      "      Information: 0x55b0318ab500\n",
       "        Debug: Off\n",
-      "        Modified Time: 470967452\n",
+      "        Modified Time: 156991666\n",
       "        Reference Count: 1\n",
       "        Registered Events: (none)\n",
       "      Name: PointId\n",
@@ -225,10 +225,10 @@
       "    Xmin,Xmax: (40.052, 60.0485)\n",
       "    Ymin,Ymax: (65.051, 85.0493)\n",
       "    Zmin,Zmax: (-3.13116, -2.50147)\n",
-      "  Compute Time: 470967763\n",
+      "  Compute Time: 156991957\n",
       "  Editable: false\n",
       "  Number Of Points: 14380\n",
-      "  Point Coordinates: 0x56005a8c0270\n",
+      "  Point Coordinates: 0x55b031862e80\n",
       "  PointLocator: 0\n",
       "  CellLocator: 0\n",
       "  Number Of Vertices: 7\n",
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "45c90d3c",
    "metadata": {},
    "outputs": [
@@ -259,8 +259,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 38.3 s, sys: 938 ms, total: 39.3 s\n",
-      "Wall time: 12.8 s\n"
+      "CPU times: user 52.8 s, sys: 1.98 s, total: 54.8 s\n",
+      "Wall time: 20.3 s\n"
      ]
     }
    ],
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "id": "556a8ce3",
    "metadata": {},
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "b0be075c",
    "metadata": {},
    "outputs": [],
