--- a/tests/test_Project_merged_points_to_image.ipynb
+++ b/tests/test_Project_merged_points_to_image.ipynb
@@ -101,12 +101,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vtkPolyData (0x55b03185e830)\n",
+      "vtkPolyData (0x55f7bccdbfb0)\n",
       "  Debug: Off\n",
       "  Modified Time: 156991680\n",
       "  Reference Count: 1\n",
       "  Registered Events: (none)\n",
-      "  Information: 0x55b03185e730\n",
+      "  Information: 0x55f7bccdbeb0\n",
       "  Data Released: False\n",
       "  Global Release Data: Off\n",
       "  UpdateTime: 156991684\n",
@@ -126,10 +126,10 @@
       "    Reference Count: 1\n",
       "    Registered Events: \n",
       "      Registered Observers:\n",
-      "        vtkObserver (0x55b03185ee90)\n",
+      "        vtkObserver (0x55f7bccdc610)\n",
       "          Event: 33\n",
       "          EventName: ModifiedEvent\n",
-      "          Command: 0x55b03185eb50\n",
+      "          Command: 0x55f7bccdc2d0\n",
       "          Priority: 0\n",
       "          Tag: 1\n",
       "    Number Of Arrays: 0\n",
@@ -155,10 +155,10 @@
       "    Reference Count: 1\n",
       "    Registered Events: \n",
       "      Registered Observers:\n",
-      "        vtkObserver (0x55b03185ed00)\n",
+      "        vtkObserver (0x55f7bccdc480)\n",
       "          Event: 33\n",
       "          EventName: ModifiedEvent\n",
-      "          Command: 0x55b03185eb50\n",
+      "          Command: 0x55f7bccdc2d0\n",
       "          Priority: 0\n",
       "          Tag: 1\n",
       "    Number Of Arrays: 3\n",
@@ -180,7 +180,7 @@
       "      Size: 14380\n",
       "      MaxId: 14379\n",
       "      NumberOfComponents: 1\n",
-      "      Information: 0x55b0318aaf20\n",
+      "      Information: 0x55f7bcd286a0\n",
       "        Debug: Off\n",
       "        Modified Time: 156991656\n",
       "        Reference Count: 1\n",
@@ -206,7 +206,7 @@
       "      Size: 14380\n",
       "      MaxId: 14379\n",
       "      NumberOfComponents: 1\n",
-      "      Information: 0x55b0318ab500\n",
+      "      Information: 0x55f7bcd28c80\n",
       "        Debug: Off\n",
       "        Modified Time: 156991666\n",
       "        Reference Count: 1\n",
@@ -228,7 +228,7 @@
       "  Compute Time: 156991957\n",
       "  Editable: false\n",
       "  Number Of Points: 14380\n",
-      "  Point Coordinates: 0x55b031862e80\n",
+      "  Point Coordinates: 0x55f7bcce0600\n",
       "  PointLocator: 0\n",
       "  CellLocator: 0\n",
       "  Number Of Vertices: 7\n",
@@ -259,8 +259,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 52.8 s, sys: 1.98 s, total: 54.8 s\n",
-      "Wall time: 20.3 s\n"
+      "CPU times: user 40.4 s, sys: 1.55 s, total: 42 s\n",
+      "Wall time: 16.1 s\n"
      ]
     }
    ],
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "8993297d",
    "metadata": {},
    "outputs": [],
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "id": "be30bc5d",
    "metadata": {},
    "outputs": [],
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "556a8ce3",
    "metadata": {},
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "b0be075c",
    "metadata": {},
    "outputs": [],
@@ -461,88 +461,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "f759a215",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pdal not imported, functions relying on it will fail\n",
+      "opencv was not imported, functions relying on it will fail\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/thayer/anaconda3/envs/vtk_gpytorch/lib/python3.7/site-packages/gpytorch/models/exact_gp.py:275: GPInputWarning: The input matches the stored training data. Did you forget to call model.train()?\n",
+      "  GPInputWarning,\n"
+     ]
+    }
+   ],
    "source": [
     "# Repeat, now with corner_coords\n",
     "corner_coords = np.array([[40, 65, 0],\n",
     "                         [40, 85, 0],\n",
     "                         [60, 85, 0]])\n",
-    "leafsize = 500000\n",
-    "lengthscale = 10\n",
-    "outputscale = 0.15\n",
+    "yaw = 0\n",
     "\n",
-    "project.merged_points_to_image(nx, ny, dx, dy, x0, y0, leafsize, lengthscale, outputscale,\n",
+    "#leafsize = 500000\n",
+    "lengthscale = 2\n",
+    "outputscale = 0.01\n",
+    "nu = 1.5\n",
+    "n_neighbors = 256\n",
+    "\n",
+    "project.merged_points_to_image(nx, ny, dx, dy, x0, y0, lengthscale, outputscale, nu, n_neighbors=n_neighbors,\n",
     "                              corner_coords=corner_coords)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "5c24c418",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "z_min = -3.5\n",
-    "z_max = -2\n",
-    "\n",
-    "project.display_image(z_min, z_max)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "343c67c8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# repeat with kdtree\n",
-    "\n",
-    "leafsize = 5000\n",
-    "lengthscale = 10\n",
-    "outputscale = 0.15\n",
-    "\n",
-    "project.merged_points_to_image(nx, ny, dx, dy, x0, y0, leafsize, lengthscale, outputscale)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "cf6ee5d8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "z_min = -3.5\n",
-    "z_max = -2\n",
-    "\n",
-    "project.display_image(z_min, z_max)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "3f897ef9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Repeat, now with corner_coords and kdtree\n",
-    "corner_coords = np.array([[40, 65, 0],\n",
-    "                         [40, 85, 0],\n",
-    "                         [60, 85, 0]])\n",
-    "leafsize = 5000\n",
-    "lengthscale = 10\n",
-    "outputscale = 0.15\n",
-    "\n",
-    "project.merged_points_to_image(nx, ny, dx, dy, x0, y0, leafsize, lengthscale, outputscale,\n",
-    "                              corner_coords=corner_coords)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "fc173839",
    "metadata": {},
    "outputs": [],
    "source": [
