Improvements to merged_points_to_image

--- a/tests/test_Project_merged_points_to_image.ipynb
+++ b/tests/test_Project_merged_points_to_image.ipynb
@@ -101,12 +101,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vtkPolyData (0x55f7bccdbfb0)\n",
+      "vtkPolyData (0x55cf589a59b0)\n",
       "  Debug: Off\n",
       "  Modified Time: 156991680\n",
       "  Reference Count: 1\n",
       "  Registered Events: (none)\n",
-      "  Information: 0x55f7bccdbeb0\n",
+      "  Information: 0x55cf589a58b0\n",
       "  Data Released: False\n",
       "  Global Release Data: Off\n",
       "  UpdateTime: 156991684\n",
@@ -126,10 +126,10 @@
       "    Reference Count: 1\n",
       "    Registered Events: \n",
       "      Registered Observers:\n",
-      "        vtkObserver (0x55f7bccdc610)\n",
+      "        vtkObserver (0x55cf589a6010)\n",
       "          Event: 33\n",
       "          EventName: ModifiedEvent\n",
-      "          Command: 0x55f7bccdc2d0\n",
+      "          Command: 0x55cf589a5cd0\n",
       "          Priority: 0\n",
       "          Tag: 1\n",
       "    Number Of Arrays: 0\n",
@@ -155,10 +155,10 @@
       "    Reference Count: 1\n",
       "    Registered Events: \n",
       "      Registered Observers:\n",
-      "        vtkObserver (0x55f7bccdc480)\n",
+      "        vtkObserver (0x55cf589a5e80)\n",
       "          Event: 33\n",
       "          EventName: ModifiedEvent\n",
-      "          Command: 0x55f7bccdc2d0\n",
+      "          Command: 0x55cf589a5cd0\n",
       "          Priority: 0\n",
       "          Tag: 1\n",
       "    Number Of Arrays: 3\n",
@@ -180,7 +180,7 @@
       "      Size: 14380\n",
       "      MaxId: 14379\n",
       "      NumberOfComponents: 1\n",
-      "      Information: 0x55f7bcd286a0\n",
+      "      Information: 0x55cf589f20a0\n",
       "        Debug: Off\n",
       "        Modified Time: 156991656\n",
       "        Reference Count: 1\n",
@@ -206,7 +206,7 @@
       "      Size: 14380\n",
       "      MaxId: 14379\n",
       "      NumberOfComponents: 1\n",
-      "      Information: 0x55f7bcd28c80\n",
+      "      Information: 0x55cf589f2680\n",
       "        Debug: Off\n",
       "        Modified Time: 156991666\n",
       "        Reference Count: 1\n",
@@ -228,7 +228,7 @@
       "  Compute Time: 156991957\n",
       "  Editable: false\n",
       "  Number Of Points: 14380\n",
-      "  Point Coordinates: 0x55f7bcce0600\n",
+      "  Point Coordinates: 0x55cf589aa000\n",
       "  PointLocator: 0\n",
       "  CellLocator: 0\n",
       "  Number Of Vertices: 7\n",
@@ -259,8 +259,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 40.4 s, sys: 1.55 s, total: 42 s\n",
-      "Wall time: 16.1 s\n"
+      "CPU times: user 42.9 s, sys: 1.59 s, total: 44.4 s\n",
+      "Wall time: 15.4 s\n"
      ]
     }
    ],
@@ -457,6 +457,31 @@
     "v_max = 0.3\n",
     "\n",
     "project.display_image(v_min, v_max, field='Elevation',warp_scalars=True, color_field='z_ci', show_points=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "edd34a8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 20.7 s, sys: 886 ms, total: 21.6 s\n",
+      "Wall time: 10.4 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# Test max_pts\n",
+    "\n",
+    "max_pts = 5000\n",
+    "\n",
+    "project.merged_points_to_image(nx, ny, dx, dy, x0, y0, lengthscale, outputscale, nu, n_neighbors=n_neighbors,\n",
+    "                              max_pts=max_pts)"
    ]
   },
   {
