--- a/tests/test_Project_merged_points_to_image.ipynb
+++ b/tests/test_Project_merged_points_to_image.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "4525d941",
    "metadata": {},
    "outputs": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "0a55030b",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "983d0018",
    "metadata": {},
    "outputs": [],
@@ -61,10 +61,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "7eeba008",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/thayer/Desktop/DavidCS/ubuntu_partition/code/pydar/pydar.py:1860: UserWarning: You are passing a SingleScan's PolyData withoutit's history.\n",
+      "  \"it's history.\")\n"
+     ]
+    }
+   ],
    "source": [
     "# Now create normalized heights\n",
     "x0 = 40.05\n",
@@ -75,8 +84,8 @@
     "dy = 0.1\n",
     "\n",
     "bounds = (x0-5, x0+nx*dx+5, y0-5, y0+ny*dy+5, -10, 0)\n",
-    "#project.create_empirical_cdf(bounds)\n",
-    "#project.create_normalized_heights()"
+    "project.create_empirical_cdf(bounds)\n",
+    "project.create_normalized_heights()"
    ]
   },
   {
@@ -88,12 +97,12 @@
    "source": [
     "# Display normalized heights\n",
     "\n",
-    "#project.display_project(-3, 3, field='norm_height')"
+    "project.display_project(-3, 3, field='norm_height')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "86c943bf",
    "metadata": {},
    "outputs": [
@@ -101,18 +110,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vtkPolyData (0x55cf589a59b0)\n",
+      "vtkPolyData (0x56221c50b990)\n",
       "  Debug: Off\n",
-      "  Modified Time: 156991680\n",
+      "  Modified Time: 157074464\n",
       "  Reference Count: 1\n",
       "  Registered Events: (none)\n",
-      "  Information: 0x55cf589a58b0\n",
+      "  Information: 0x56221c50b890\n",
       "  Data Released: False\n",
       "  Global Release Data: Off\n",
-      "  UpdateTime: 156991684\n",
+      "  UpdateTime: 157074470\n",
       "  Field Data:\n",
       "    Debug: Off\n",
-      "    Modified Time: 156991515\n",
+      "    Modified Time: 157074229\n",
       "    Reference Count: 1\n",
       "    Registered Events: (none)\n",
       "    Number Of Arrays: 0\n",
@@ -122,14 +131,14 @@
       "  Number Of Cells: 7\n",
       "  Cell Data:\n",
       "    Debug: Off\n",
-      "    Modified Time: 156991646\n",
+      "    Modified Time: 157074410\n",
       "    Reference Count: 1\n",
       "    Registered Events: \n",
       "      Registered Observers:\n",
-      "        vtkObserver (0x55cf589a6010)\n",
+      "        vtkObserver (0x5622244a4e50)\n",
       "          Event: 33\n",
       "          EventName: ModifiedEvent\n",
-      "          Command: 0x55cf589a5cd0\n",
+      "          Command: 0x56221c50bcb0\n",
       "          Priority: 0\n",
       "          Tag: 1\n",
       "    Number Of Arrays: 0\n",
@@ -151,41 +160,43 @@
       "    HigherOrderDegrees: (none)\n",
       "  Point Data:\n",
       "    Debug: Off\n",
-      "    Modified Time: 156991678\n",
+      "    Modified Time: 157074462\n",
       "    Reference Count: 1\n",
       "    Registered Events: \n",
       "      Registered Observers:\n",
-      "        vtkObserver (0x55cf589a5e80)\n",
+      "        vtkObserver (0x56221c50be60)\n",
       "          Event: 33\n",
       "          EventName: ModifiedEvent\n",
-      "          Command: 0x55cf589a5cd0\n",
+      "          Command: 0x56221c50bcb0\n",
       "          Priority: 0\n",
       "          Tag: 1\n",
-      "    Number Of Arrays: 3\n",
+      "    Number Of Arrays: 5\n",
       "    Array 0 name = Classification\n",
       "    Array 1 name = PointId\n",
-      "    Array 2 name = z_sigma\n",
-      "    Number Of Components: 3\n",
+      "    Array 2 name = norm_height\n",
+      "    Array 3 name = norm_z_sigma\n",
+      "    Array 4 name = z_sigma\n",
+      "    Number Of Components: 5\n",
       "    Number Of Tuples: 14380\n",
       "    Copy Tuple Flags: ( 1 1 1 1 1 1 1 1 1 1 1 )\n",
       "    Interpolate Flags: ( 1 1 1 1 1 0 0 1 1 1 1 )\n",
       "    Pass Through Flags: ( 1 1 1 1 1 1 1 1 1 1 1 )\n",
       "    Scalars: \n",
       "      Debug: Off\n",
-      "      Modified Time: 156991652\n",
+      "      Modified Time: 157074437\n",
       "      Reference Count: 1\n",
       "      Registered Events: (none)\n",
-      "      Name: Classification\n",
-      "      Data type: unsigned char\n",
+      "      Name: norm_height\n",
+      "      Data type: float\n",
       "      Size: 14380\n",
       "      MaxId: 14379\n",
       "      NumberOfComponents: 1\n",
-      "      Information: 0x55cf589f20a0\n",
+      "      Information: 0x56221c509ad0\n",
       "        Debug: Off\n",
-      "        Modified Time: 156991656\n",
+      "        Modified Time: 157074441\n",
       "        Reference Count: 1\n",
       "        Registered Events: (none)\n",
-      "      Name: Classification\n",
+      "      Name: norm_height\n",
       "      Number Of Components: 1\n",
       "      Number Of Tuples: 14380\n",
       "      Size: 14380\n",
@@ -198,7 +209,7 @@
       "    GlobalIds: (none)\n",
       "    PedigreeIds: \n",
       "      Debug: Off\n",
-      "      Modified Time: 156991662\n",
+      "      Modified Time: 157074427\n",
       "      Reference Count: 1\n",
       "      Registered Events: (none)\n",
       "      Name: PointId\n",
@@ -206,9 +217,9 @@
       "      Size: 14380\n",
       "      MaxId: 14379\n",
       "      NumberOfComponents: 1\n",
-      "      Information: 0x55cf589f2680\n",
+      "      Information: 0x562244bf3c10\n",
       "        Debug: Off\n",
-      "        Modified Time: 156991666\n",
+      "        Modified Time: 157074431\n",
       "        Reference Count: 1\n",
       "        Registered Events: (none)\n",
       "      Name: PointId\n",
@@ -225,10 +236,10 @@
       "    Xmin,Xmax: (40.052, 60.0485)\n",
       "    Ymin,Ymax: (65.051, 85.0493)\n",
       "    Zmin,Zmax: (-3.13116, -2.50147)\n",
-      "  Compute Time: 156991957\n",
+      "  Compute Time: 157074813\n",
       "  Editable: false\n",
       "  Number Of Points: 14380\n",
-      "  Point Coordinates: 0x55cf589aa000\n",
+      "  Point Coordinates: 0x56222448fd20\n",
       "  PointLocator: 0\n",
       "  CellLocator: 0\n",
       "  Number Of Vertices: 7\n",
@@ -251,38 +262,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "45c90d3c",
+   "execution_count": 10,
+   "id": "3332055f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 42.9 s, sys: 1.59 s, total: 44.4 s\n",
-      "Wall time: 15.4 s\n"
+      "-4.069133\n",
+      "3.2532096\n",
+      "-3.441732\n",
+      "0.5273427\n",
+      "7\n"
      ]
     }
    ],
    "source": [
-    "%%time\n",
+    "norm_height = vtk_to_numpy(pdata.GetPointData().GetArray('norm_height'))\n",
+    "print(norm_height.min())\n",
+    "print(norm_height.max())\n",
     "\n",
-    "# Test our function for using gpytorch to create an image from points\n",
-    "\n",
-    "yaw = 0\n",
-    "\n",
-    "#leafsize = 500000\n",
-    "lengthscale = 2\n",
-    "outputscale = 0.01\n",
-    "nu = 1.5\n",
-    "n_neighbors = 256\n",
-    "\n",
-    "project.merged_points_to_image(nx, ny, dx, dy, x0, y0, lengthscale, outputscale, nu, n_neighbors=n_neighbors)"
+    "norm_z_sigma = vtk_to_numpy(pdata.GetPointData().GetArray('norm_z_sigma'))\n",
+    "print(norm_z_sigma.min())\n",
+    "print(norm_z_sigma.max())\n",
+    "print((norm_z_sigma<0).sum())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
+   "id": "45c90d3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/thayer/Desktop/DavidCS/ubuntu_partition/code/pydar/pydar.py:4976: UserWarning: Still has temporary fix for negative norm z sigma\n",
+      "  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test our function for using gpytorch to create an image from points\n",
+    "\n",
+    "yaw = 0\n",
+    "\n",
+    "leafsize = 500000\n",
+    "lengthscale = 10\n",
+    "outputscale = 0.15\n",
+    "\n",
+    "project.merged_points_to_image(nx, ny, dx, dy, x0, y0, leafsize, lengthscale, outputscale)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "8993297d",
    "metadata": {},
    "outputs": [],
@@ -291,19 +327,6 @@
     "z_max = -2\n",
     "\n",
     "project.display_image(z_min, z_max)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "be30bc5d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "z_min = 0\n",
-    "z_max = 0.25\n",
-    "\n",
-    "project.display_image(z_min, z_max, field='z_ci')"
    ]
   },
   {
@@ -321,213 +344,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "28170d5e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "vtkImageData (0x5600bbf5f7f0)\n",
-      "  Debug: Off\n",
-      "  Modified Time: 1099731304\n",
-      "  Reference Count: 1\n",
-      "  Registered Events: (none)\n",
-      "  Information: 0x5600543717b0\n",
-      "  Data Released: False\n",
-      "  Global Release Data: Off\n",
-      "  UpdateTime: 1099686936\n",
-      "  Field Data:\n",
-      "    Debug: Off\n",
-      "    Modified Time: 1099683294\n",
-      "    Reference Count: 1\n",
-      "    Registered Events: (none)\n",
-      "    Number Of Arrays: 0\n",
-      "    Number Of Components: 0\n",
-      "    Number Of Tuples: 0\n",
-      "  Number Of Points: 40000\n",
-      "  Number Of Cells: 39601\n",
-      "  Cell Data:\n",
-      "    Debug: Off\n",
-      "    Modified Time: 1099683297\n",
-      "    Reference Count: 1\n",
-      "    Registered Events: \n",
-      "      Registered Observers:\n",
-      "        vtkObserver (0x5600c2374410)\n",
-      "          Event: 33\n",
-      "          EventName: ModifiedEvent\n",
-      "          Command: 0x5600c29c51c0\n",
-      "          Priority: 0\n",
-      "          Tag: 1\n",
-      "    Number Of Arrays: 0\n",
-      "    Number Of Components: 0\n",
-      "    Number Of Tuples: 0\n",
-      "    Copy Tuple Flags: ( 1 1 1 1 1 0 1 1 1 1 1 )\n",
-      "    Interpolate Flags: ( 1 1 1 1 1 0 0 1 1 1 1 )\n",
-      "    Pass Through Flags: ( 1 1 1 1 1 1 1 1 1 1 1 )\n",
-      "    Scalars: (none)\n",
-      "    Vectors: (none)\n",
-      "    Normals: (none)\n",
-      "    TCoords: (none)\n",
-      "    Tensors: (none)\n",
-      "    GlobalIds: (none)\n",
-      "    PedigreeIds: (none)\n",
-      "    EdgeFlag: (none)\n",
-      "    Tangents: (none)\n",
-      "    RationalWeights: (none)\n",
-      "    HigherOrderDegrees: (none)\n",
-      "  Point Data:\n",
-      "    Debug: Off\n",
-      "    Modified Time: 1099731304\n",
-      "    Reference Count: 1\n",
-      "    Registered Events: \n",
-      "      Registered Observers:\n",
-      "        vtkObserver (0x5600c5927770)\n",
-      "          Event: 33\n",
-      "          EventName: ModifiedEvent\n",
-      "          Command: 0x5600c29c51c0\n",
-      "          Priority: 0\n",
-      "          Tag: 1\n",
-      "    Number Of Arrays: 4\n",
-      "    Array 0 name = Elevation\n",
-      "    Array 1 name = z_lower\n",
-      "    Array 2 name = z_upper\n",
-      "    Array 3 name = z_ci\n",
-      "    Number Of Components: 4\n",
-      "    Number Of Tuples: 40000\n",
-      "    Copy Tuple Flags: ( 1 1 1 1 1 0 1 1 1 1 1 )\n",
-      "    Interpolate Flags: ( 1 1 1 1 1 0 0 1 1 1 1 )\n",
-      "    Pass Through Flags: ( 1 1 1 1 1 1 1 1 1 1 1 )\n",
-      "    Scalars: \n",
-      "      Debug: Off\n",
-      "      Modified Time: 1099683350\n",
-      "      Reference Count: 1\n",
-      "      Registered Events: (none)\n",
-      "      Name: Elevation\n",
-      "      Data type: float\n",
-      "      Size: 40000\n",
-      "      MaxId: 39999\n",
-      "      NumberOfComponents: 1\n",
-      "      Information: 0\n",
-      "      Name: Elevation\n",
-      "      Number Of Components: 1\n",
-      "      Number Of Tuples: 40000\n",
-      "      Size: 40000\n",
-      "      MaxId: 39999\n",
-      "      LookupTable: (none)\n",
-      "    Vectors: (none)\n",
-      "    Normals: (none)\n",
-      "    TCoords: (none)\n",
-      "    Tensors: (none)\n",
-      "    GlobalIds: (none)\n",
-      "    PedigreeIds: (none)\n",
-      "    EdgeFlag: (none)\n",
-      "    Tangents: (none)\n",
-      "    RationalWeights: (none)\n",
-      "    HigherOrderDegrees: (none)\n",
-      "  Bounds: \n",
-      "    Xmin,Xmax: (0, 19.9)\n",
-      "    Ymin,Ymax: (0, 19.9)\n",
-      "    Zmin,Zmax: (0, 0)\n",
-      "  Compute Time: 1100467078\n",
-      "  Spacing: (0.1, 0.1, 1)\n",
-      "  Origin: (0, 0, 0)\n",
-      "  Direction: (1, 0, 0, 0, 1, 0, 0, 0, 1)\n",
-      "  Dimensions: (200, 200, 1)\n",
-      "  Increments: (0, 0, 0)\n",
-      "  Extent: (0, 199, 0, 199, 0, 0)\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(project.image)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 14,
    "id": "b0be075c",
    "metadata": {},
    "outputs": [],
    "source": [
     "v_min = 0\n",
-    "v_max = 0.3\n",
+    "v_max = 0.1\n",
     "\n",
-    "project.display_image(v_min, v_max, field='Elevation',warp_scalars=True, color_field='z_ci', show_points=True)"
+    "project.display_image(v_min, v_max, field='Elevation',warp_scalars=True, color_field='z_ci')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "edd34a8a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 20.7 s, sys: 886 ms, total: 21.6 s\n",
-      "Wall time: 10.4 s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "# Test max_pts\n",
-    "\n",
-    "max_pts = 5000\n",
-    "\n",
-    "project.merged_points_to_image(nx, ny, dx, dy, x0, y0, lengthscale, outputscale, nu, n_neighbors=n_neighbors,\n",
-    "                              max_pts=max_pts)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "f759a215",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pdal not imported, functions relying on it will fail\n",
-      "opencv was not imported, functions relying on it will fail\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/thayer/anaconda3/envs/vtk_gpytorch/lib/python3.7/site-packages/gpytorch/models/exact_gp.py:275: GPInputWarning: The input matches the stored training data. Did you forget to call model.train()?\n",
-      "  GPInputWarning,\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Repeat, now with corner_coords\n",
     "corner_coords = np.array([[40, 65, 0],\n",
     "                         [40, 85, 0],\n",
     "                         [60, 85, 0]])\n",
-    "yaw = 0\n",
+    "leafsize = 500000\n",
+    "lengthscale = 10\n",
+    "outputscale = 0.15\n",
     "\n",
-    "#leafsize = 500000\n",
-    "lengthscale = 2\n",
-    "outputscale = 0.01\n",
-    "nu = 1.5\n",
-    "n_neighbors = 256\n",
-    "\n",
-    "project.merged_points_to_image(nx, ny, dx, dy, x0, y0, lengthscale, outputscale, nu, n_neighbors=n_neighbors,\n",
+    "project.merged_points_to_image(nx, ny, dx, dy, x0, y0, leafsize, lengthscale, outputscale,\n",
     "                              corner_coords=corner_coords)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "5c24c418",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z_min = -3.5\n",
+    "z_max = -2\n",
+    "\n",
+    "project.display_image(z_min, z_max)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "343c67c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# repeat with kdtree\n",
+    "\n",
+    "leafsize = 5000\n",
+    "lengthscale = 10\n",
+    "outputscale = 0.15\n",
+    "\n",
+    "project.merged_points_to_image(nx, ny, dx, dy, x0, y0, leafsize, lengthscale, outputscale)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "cf6ee5d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z_min = -3.5\n",
+    "z_max = -2\n",
+    "\n",
+    "project.display_image(z_min, z_max)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "3f897ef9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Repeat, now with corner_coords and kdtree\n",
+    "corner_coords = np.array([[40, 65, 0],\n",
+    "                         [40, 85, 0],\n",
+    "                         [60, 85, 0]])\n",
+    "leafsize = 5000\n",
+    "lengthscale = 10\n",
+    "outputscale = 0.15\n",
+    "\n",
+    "project.merged_points_to_image(nx, ny, dx, dy, x0, y0, leafsize, lengthscale, outputscale,\n",
+    "                              corner_coords=corner_coords)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "fc173839",
    "metadata": {},
    "outputs": [],
    "source": [
